VPC app SG, RDS Proxy, Lambda VPC config, Secrets access

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,12 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+.terraform/
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
+
+# Node
+node_modules/
+backend/**/dist/
